2012-02-03  Eli Zaretskii  <eliz@gnu.org>

	* w32/subproc/sub_proc.c (proc_stdin_thread, proc_stdout_thread)
	(proc_stderr_thread, process_pipe_io): Ifdef away unused
	functions.

	* w32/subproc/w32err.c (map_windows32_error_to_string) [_MSC_VER]:
	Don't use TLS storage for szMessageBuffer.  Ifdef away special
	code for handling Winsock error codes.  Make the function return a
	`const char *'.  Suggested by Ozkan Sezer.  Fixes Savannah bug #34832.

2012-01-29  Paul Smith  <psmith@gnu.org>

	* gmk-default.scm (to-string-maybe): Variables map to empty strings.
	In Guile 2.0, (define ...) results in a variable object so make
	sure that maps to an empty string in make.

	* variable.c (parse_variable_definition): New POSIX assignment ::=
	Take a struct variable to return more information after parsing.
	(assign_variable_definition): New parse_variable_definition() call.
	* variable.h: New declaration of parse_variable_definition().
	* read.c (do_define): New parse_variable_definition() call.
	(parse_var_assignment): Ditto.
	(get_next_mword): Parse ::= as a variable assignment.
	* doc/make.texi (Flavors): Describe the new ::= syntax.
	* NEWS: Mention the ::= operator.

	* variable.h (struct variable): Rearrange elts to reduce struct size.

	* function.c (func_file): Create a new function, $(file ...)
	* doc/make.texi (File Function): Document the $(file ..) function.
	* NEWS: Announce it.

	* gmk-default.scm (to-string-maybe): Use a more portable way to
	test for unprintable characters.
	* configure.in [GUILE]: Guile 1.6 doesn't have pkg-config
	* build_w32.bat: Ditto.

2012-01-28  Eli Zaretskii  <eliz@gnu.org>

	* config.h.W32.template: Update from config.h.in.

	Support a Windows build with Guile.

	* README.W32.template: Update with instructions for building with
	Guile.

	* build_w32.bat: Support building with Guile.

	* make.h [HAVE_STDINT_H]: Include stdint.h.

	* main.c (main, clean_jobserver): Move declarations of variables