@@ -1,3 +1,8 @@
+2012-02-26  Paul Smith  <psmith@gnu.org>
+
+	* implicit.c (pattern_search): Check the stem length to avoid
+	stack overflows in stem_str.  Fixes Savannah bug #35525.
+
 2012-02-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32/subproc/sub_proc.c (proc_stdin_thread, proc_stdout_thread)
